--- a/portfolio.html
+++ b/portfolio.html
@@ -67,87 +67,161 @@
                 <!-- <h1>Наші пріорітети</h1> -->
                 <ul class="work-card">
                     <li class="work-card-item">
-                        <a href="">
-                            <img class="work-card-img" src="./imagnes/img1.jpg" width="370"
-                                alt="ноут бук з фоттографіями">
-                            <div class="port-card">
-                                <h2 class="portfolio-title">Технокряк</h2>
-                                <p class="portfolio-work-title">Веб-Сайт</p>
-                            </div>
-                        </a>
+                        <div class="work-card-cont">
+                            <a href="">
+                                <img class="work-card-img" src="./imagnes/img1.jpg" width="370"
+                                    alt="ноут бук з фоттографіями">
+                                <div class="port-card">
+                                    <h2 class="portfolio-title">Технокряк</h2>
+                                    <p class="portfolio-work-title">Веб-Сайт</p>
+                                    <div class="work-card-opacity">
+                                        <p class="work-opacity-text">Технокряк это современная площадка распространения
+                                            коронавируса. Компании
+                                            используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                                            конкурентов.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </li>
                     <li class="work-card-item">
-                        <a href="">
-                            <img class="work-card-img" src="./imagnes/img2.jpg" width="370" alt="гра в баскетбол">
-                            <div class="port-card">
-                                <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-                                <p class="portfolio-work-title">Дизайн</p>
-                            </div>
-                        </a>
+                        <div class="work-card-cont">
+                            <a href="">
+                                <img class="work-card-img" src="./imagnes/img2.jpg" width="370" alt="гра в баскетбол">
+                                <div class="port-card">
+                                    <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                                    <p class="portfolio-work-title">Дизайн</p>
+                                    <div class="work-card-opacity">
+                                        <p class="work-opacity-text">Технокряк это современная площадка распространения
+                                            коронавируса. Компании
+                                            используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                                            конкурентов.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </li>
                     <li class="work-card-item">
-                        <a href="">
-                            <img class="work-card-img" src=" ./imagnes/img3.jpg" width="370" alt="вивіска ресторану">
-                            <div class="port-card">
-                                <h2 class="portfolio-title">Проєкт Prime</h2>
-                                <p class="portfolio-work-title">Маркетинг</p>
-                            </div>
-                        </a>
+                        <div class="work-card-cont">
+                            <a href="">
+                                <img class="work-card-img" src=" ./imagnes/img3.jpg" width="370"
+                                    alt="вивіска ресторану">
+                                <div class="port-card">
+                                    <h2 class="portfolio-title">Проєкт Prime</h2>
+                                    <p class="portfolio-work-title">Маркетинг</p>
+                                    <div class="work-card-opacity">
+                                        <p class="work-opacity-text">Технокряк это современная площадка распространения
+                                            коронавируса. Компании
+                                            используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                                            конкурентов.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </li>
                     <li class="work-card-item">
-                        <a href="">
-                            <img class="work-card-img" src=" ./imagnes/img4.jpg" width="370" alt="навушники">
-                            <div class="port-card">
-                                <h2 class="portfolio-title">Проєкт Boxes</h2>
-                                <p class="portfolio-work-title">Додаток</p>
-                            </div>
-                        </a>
+                        <div class="work-card-cont">
+                            <a href="">
+                                <img class="work-card-img" src=" ./imagnes/img4.jpg" width="370" alt="навушники">
+                                <div class="port-card">
+                                    <h2 class="portfolio-title">Проєкт Boxes</h2>
+                                    <p class="portfolio-work-title">Додаток</p>
+                                    <div class="work-card-opacity">
+                                        <p class="work-opacity-text">Технокряк это современная площадка распространения
+                                            коронавируса. Компании
+                                            используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                                            конкурентов.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </li>
                     <li class="work-card-item">
-                        <a href="">
-                            <img class="work-card-img" src=" ./imagnes/img5.jpg" width="370" alt="продукція">
-                            <div class="port-card">
-                                <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                                <p class="portfolio-work-title">Веб-сайт</p>
-                            </div>
-                        </a>
+                        <div class="work-card-cont">
+                            <a href="">
+                                <img class="work-card-img" src=" ./imagnes/img5.jpg" width="370" alt="продукція">
+                                <div class="port-card">
+                                    <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                                    <p class="portfolio-work-title">Веб-сайт</p>
+                                    <div class="work-card-opacity">
+                                        <p class="work-opacity-text">Технокряк это современная площадка распространения
+                                            коронавируса. Компании
+                                            используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                                            конкурентов.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </li>
                     <li class="work-card-item">
-                        <a href="">
-                            <img class="work-card-img" src=" ./imagnes/img6.jpg" width="370"
-                                alt="монітор з посиланнями">
-                            <div class="port-card">
-                                <h2 class="portfolio-title">Видання Limited Edition</h2>
-                                <p class="portfolio-work-title">Дизайн</p>
-                            </div>
-                        </a>
+                        <div class="work-card-cont">
+                            <a href="">
+                                <img class="work-card-img" src=" ./imagnes/img6.jpg" width="370"
+                                    alt="монітор з посиланнями">
+                                <div class="port-card">
+                                    <h2 class="portfolio-title">Видання Limited Edition</h2>
+                                    <p class="portfolio-work-title">Дизайн</p>
+                                    <div class="work-card-opacity">
+                                        <p class="work-opacity-text">Технокряк это современная площадка распространения
+                                            коронавируса. Компании
+                                            используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                                            конкурентов.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </li>
                     <li class="work-card-item">
-                        <a href="">
-                            <img class="work-card-img" src=" ./imagnes/img7.jpg" width="370" alt="журнал з статтями">
-                            <div class="port-card">
-                                <h2 class="portfolio-title">Проєкт LAB</h2>
-                                <p class="portfolio-work-title">Маркетинг</p>
-                            </div>
-                        </a>
+                        <div class="work-card-cont">
+                            <a href="">
+                                <img class="work-card-img" src=" ./imagnes/img7.jpg" width="370"
+                                    alt="журнал з статтями">
+                                <div class="port-card">
+                                    <h2 class="portfolio-title">Проєкт LAB</h2>
+                                    <p class="portfolio-work-title">Маркетинг</p>
+                                    <div class="work-card-opacity">
+                                        <p class="work-opacity-text">Технокряк это современная площадка распространения
+                                            коронавируса. Компании
+                                            используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                                            конкурентов.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </li>
                     <li class="work-card-item">
-                        <a href="">
-                            <img class="work-card-img" src=" ./imagnes/img8.jpg" width="370" alt="бірка">
-                            <div class="port-card">
-                                <h2 class="portfolio-title">Growing Business</h2>
-                                <p class="portfolio-work-title">Додаток</p>
-                            </div>
-                        </a>
+                        <div class="work-card-cont">
+                            <a href="">
+                                <img class="work-card-img" src=" ./imagnes/img8.jpg" width="370" alt="бірка">
+                                <div class="port-card">
+                                    <h2 class="portfolio-title">Growing Business</h2>
+                                    <p class="portfolio-work-title">Додаток</p>
+                                    <div class="work-card-opacity">
+                                        <p class="work-opacity-text">Технокряк это современная площадка распространения
+                                            коронавируса. Компании
+                                            используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                                            конкурентов.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </li>
                     <li class="work-card-item">
-                        <a href="">
-                            <img class="work-card-img" src=" ./imagnes/img9.jpg" width="370" alt="ноутбук">
-                            <div class="port-card">
-                                <h2 class="portfolio-title">Growing Business</h2>
-                                <p class="portfolio-work-title">Додаток</p>
-                            </div>
-                        </a>
+                        <div class="work-card-cont">
+                            <a href="">
+                                <img class="work-card-img" src=" ./imagnes/img9.jpg" width="370" alt="ноутбук">
+                                <div class="port-card">
+                                    <h2 class="portfolio-title">Growing Business</h2>
+                                    <p class="portfolio-work-title">Додаток</p>
+                                    <div class="work-card-opacity">
+                                        <p class="work-opacity-text">Технокряк это современная площадка распространения
+                                            коронавируса. Компании
+                                            используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                                            конкурентов.</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </li>
                 </ul>
             </div>
