--- a/index.html
+++ b/index.html
@@ -58,7 +58,16 @@
         <section class="hero">
             <div class="container">
                 <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-                <button class="btn" type="button">Замовити послугу</button>
+                <button data-modal-open class="btn" type="button">Замовити послугу</button>
+                <div data-modal class="backdrop is-hidden">
+                    <div class="modal">
+                        <button data-modal-close class="btn-close" type="button">
+                            <svg class="btn-close-icon" width="18" height="18">
+                                <use xlink:href="./imagnes/sprite.svg#icon-close-black"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- section2 Features -->
@@ -115,15 +124,37 @@
                 <h2 class="section-title">Чим ми займаємося</h2>
                 <ul class="work-fotos">
                     <li>
-                        <img class="card-image" src="./imagnes/photo1.jpg" width="370"
-                            alt="розробка графічного дизайну">
+                        <a href="">
+                            <div class="work-img-cont">
+                                <img class="card-image" src="./imagnes/photo1.jpg" width="370"
+                                    alt="розробка графічного дизайну">
+                                <div class="card-image-cont">
+                                    <h3 class="card-image-title">Десктопні додатки</h3>
+                                </div>
+                            </div>
+                        </a>
                     </li>
                     <li>
-                        <img class="card-image" src="./imagnes/photo2.jpg" width="370"
-                            alt="хороша комунікація з клієнтом">
+                        <a href="">
+                            <div class="work-img-cont">
+                                <img class="card-image" src="./imagnes/photo2.jpg" width="370"
+                                    alt="хороша комунікація з клієнтом">
+                                <div class="card-image-cont">
+                                    <h3 class="card-image-title">Мобільні додатки</h3>
+                                </div>
+                            </div>
+                        </a>
                     </li>
                     <li>
-                        <img class="card-image" src="./imagnes/photo3.jpg" width="370" alt="підбір яскравих кольорів">
+                        <a href="">
+                            <div class="work-img-cont">
+                                <img class="card-image" src="./imagnes/photo3.jpg" width="370"
+                                    alt="підбір яскравих кольорів">
+                                <div class="card-image-cont">
+                                    <h3 class="card-image-title">Дизайнерські рішення</h3>
+                                </div>
+                            </div>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -398,7 +429,7 @@
             </div>
         </div>
     </footer>
-
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
