--- a/index.html
+++ b/index.html
@@ -377,22 +377,22 @@
                 <a class="logo" href="./index.html">Web
                     <span class="accent-secondary">Studio</span>
                 </a>
-                <address class="footer-adress">
-                    <ul class="footer-raws">
-                        <li class="footer-list">
-                            <a class="footer-link" href=".//googlemap" target="_blank" rel="noopener noreferrer"> м.
+                <ul class="footer-raws">
+                    <li class="footer-list">
+                        <address class="footer-adress">
+                            <a class="footer-adress" href=".//googlemap" target="_blank" rel="noopener noreferrer"> м.
                                 Київ, пр-т Лесі
                                 Українки,
                                 26</a>
-                        </li>
-                        <li class="footer-list">
-                            <a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                        </li>
-                        <li class="footer-list">
-                            <a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
-                        </li>
-                    </ul>
-                </address>
+                        </address>
+                    </li>
+                    <li class="footer-list">
+                        <a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="footer-list">
+                        <a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                </ul>
             </div>
             <div class="footer-card-right">
                 <h3 class="footer-title2">приєднуйтесь</h3>
